@@ -3,6 +3,7 @@ CHANGES
 
 HEAD
 ------------------
+- send local DATE/TIME with CONNECT when in NT-mode.
 - added transfergroup config option to set controllers allowed for transfer.
 
 chan_capi-1.0.2
